# src/modules/employees/employees.controller.ts
@@ -1,10 +1,12 @@
-import { TQuery } from 'modules/type';
+import { TParamsId, TQuery } from 'modules/type';
 import { TRouterFn } from 'type';
 import { TEmployees } from 'db/schema';
 import { EmployeesService, TGetEmployees } from './employees.service';
+import { TEmployeeDBResponse } from 'db/services/EmployeesDB.service';
 
 interface IEmployeesController {
   getEmployees: TRouterFn<TGetEmployees, TQuery>;
+  getEmployeeId: TRouterFn<TEmployeeDBResponse, void, TParamsId>;
 }
 
 export class EmployeesController implements IEmployeesController {
@@ -15,5 +17,12 @@ export class EmployeesController implements IEmployeesController {
     const employees = await this.employeesService.getEmployees(query);
 
     return res.json(employees);
+  };
+
+  getEmployeeId: TRouterFn<TEmployeeDBResponse, void, TParamsId> = async (req, res) => {
+    const { searchId } = req.params;
+    const employee = await this.employeesService.getEmployeeId(+searchId);
+
+    return res.json(employee);
   };
 }
